# expenses-ai-agent

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  Notes.md  README.md  benchmark_history.jsonl  docker-compose.yml  pyproject.toml  tbump.toml  todo.md
.github/workflows/: ci.yaml
src/AAI/: main.py
src/expenses_ai_agent/: main.py
src/expenses_ai_agent/api/: deps.py  main.py
src/expenses_ai_agent/api/routes/: analytics.py  categories.py  expenses.py
src/expenses_ai_agent/api/schemas/: expense.py
src/expenses_ai_agent/cli/: cli.py
src/expenses_ai_agent/conf/: config.py
src/expenses_ai_agent/llms/: base.py  exceptions.py  openai.py  output.py
src/expenses_ai_agent/prompts/: system.py  user.py
src/expenses_ai_agent/services/: classification.py
src/expenses_ai_agent/storage/: exceptions.py  models.py  repo.py
src/expenses_ai_agent/streamlit/: api_client.py  app.py
src/expenses_ai_agent/streamlit/views/: add_expense.py  dashboard.py  expenses.py
src/expenses_ai_agent/telegram/: bot.py  handlers.py
src/expenses_ai_agent/tools/: tools.py
src/expenses_ai_agent/utils/: currency.py  date_formatter.py  exceptions.py
tests/: test_main.py  test_performance.py  test_week4_telegram_bot.py
tests/integration/: test_secrets.py
tests/unit/: test_week1.py  test_week1_extras.py  test_week2.py  test_week2_extras.py  test_week3.py  test_week3_extras.py  test_week4_handlers.py  test_week4_handlers_extras.py  test_week5_api.py  test_week5_api_extras.py  test_week5_api_routes.py  test_week5_repos.py  test_week5_streamlit.py  test_week5_streamlit_client.py  test_week5_streamlit_extras.py  test_week5_streamlit_views.py  test_week5_streamlit_views_extras.py  test_week6_coverage.py  test_week6_docker.py  test_week6_user_preferences.py
tools/: clean  compare_hw.py  find_import.sh  fix-project.sh  local-perf  profile_exhaustive.py  unenv  unenv.sh
