[project]
name = "expenses_ai_agent"
version = "0.5.5-beta"
description = "AI Agent to track expenses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "jsonschema>=4.26.0",
    "openai>=2.32.0",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "python-decouple>=3.8",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.57.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.3",
    "line-profiler>=5.0.2",
    "pandas>=3.0.1", # to analyze performance
    "prek>=0.3.8",
    "pyinstrument>=5.1.2", # to analyze performance
    "pytest-cov>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "mutmut>=3.5.0",
    "tbump>=6.11.0",
    "pytest-env>=1.6.0",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expenses_ai_agent"]

[tool.uv]
managed = true
package = true

[tool.ruff]
target-version = "py313"  # highest currently available
line-length = 88
format.preview = true

[tool.ruff.lint]
# Keep your existing selection
select = ["F", "I", "E", "W", "UP"]

[tool.ty.environment]
# This is the most common fix for src-layout diagnostics
# It tells ty where the 'First Party' code starts.
extra-paths = ["src"]

[tool.ty.analysis]
# Ensure ty respects your existing type ignores from other checkers
respect-type-ignore-comments = true

[tool.pytest.ini_options]
# This tells pytest: "Always look inside 'src' for my packages, and 'tests' for my tests
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = "ignore:.*tracked for every message.*:UserWarning"
env = [
    "D:EXCHANGE_RATE_API_KEY=dummy_value",  # for unit testing
]
markers = [
    "integration: integration tests, which require interacting with other services (databases, LLMs, ...)",
    "secrets: tests that require secret keys",
]
addopts = "--cov=src --cov-fail-under=80"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cov",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\."
]
fail_under = 80 # should be 95 or 100
show_missing = true

[tool.fastapi]
entrypoint = "src.expenses_ai_agent.api.main:app"

[tool.mutmut]
   paths = ["src"]
   test_runner = "pytest"

[project.scripts]
expenses-ai-agent = "expenses_ai_agent.cli.cli:app"
eaa = "expenses_ai_agent.cli.cli:app"            # convenient synonym
expenses-telegram-bot = "expenses_ai_agent.telegram.bot:main"  # add this line
etb = "expenses_ai_agent.telegram.bot:main"  # add this line
